Some performance improvements in simulation core