@@ -3,10 +3,10 @@ package de.sikeller.aqs.model;
 import java.util.*;
 import java.util.concurrent.locks.ReadWriteLock;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
+import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.stream.Collectors;
-import lombok.Builder;
-import lombok.Data;
+import lombok.*;
 
 /**
  * The World class represents a simulation environment where taxis and clients are present. It
@@ -15,17 +15,22 @@ import lombok.Data;
  *
  * <p>A world object is always a snapshot of the scenario at a specific point in time.
  */
-@Data
+@Getter
+@EqualsAndHashCode
+@ToString
 @Builder
+@AllArgsConstructor
 public class WorldObject implements World {
-  private int maxX;
-  private int maxY;
+  public static final int DEFAULT_WORLD_SIZE = 40000;
+
   private final ReadWriteLock lock = new ReentrantReadWriteLock();
   @Builder.Default private final Collection<Taxi> taxis = new ArrayList<>();
   @Builder.Default private final Collection<TaxiEntity> taxiEntities = new ArrayList<>();
   @Builder.Default private final Collection<Client> clients = new ArrayList<>();
   @Builder.Default private final Collection<ClientEntity> clientEntities = new ArrayList<>();
-  @Builder.Default private long currentTime = 0;
+  @Builder.Default private WorldSize size = World.size(DEFAULT_WORLD_SIZE, DEFAULT_WORLD_SIZE);
+
+  @Setter @Builder.Default private long currentTime = 0;
 
   @Builder.Default
   private Function<WorldObject, Boolean> isFinished =
@@ -68,7 +73,6 @@ public class WorldObject implements World {
     try {
       lock.readLock().lock();
       Collection<Client> result = new ArrayList<>();
-      // for loop to improve performance for large client collections and use ArrayList as result
       for (Client client : clients) {
         if ((!onlySpawned || client.isSpawned(currentTime)) && modes.contains(client.getMode())) {
           result.add(client);
@@ -80,12 +84,27 @@ public class WorldObject implements World {
     }
   }
 
+  /** Count of clients which are already spawned and not finished yet. */
+  public int getActiveClientsCount() {
+    try {
+      lock.readLock().lock();
+      int count = 0;
+      for (Client client : clients) {
+        if (client.isSpawned(currentTime) && !client.getMode().equals(ClientMode.FINISHED)) {
+          count++;
+        }
+      }
+      return count;
+    } finally {
+      lock.readLock().unlock();
+    }
+  }
+
   @Override
   public Collection<Client> getClientsByMode(ClientMode mode, boolean onlySpawned) {
     try {
       lock.readLock().lock();
       Collection<Client> result = new ArrayList<>();
-      // for loop to improve performance for large client collections and use ArrayList as result
       for (Client client : clients) {
         if ((!onlySpawned || client.isSpawned(currentTime)) && mode.equals(client.getMode())) {
           result.add(client);
@@ -163,8 +182,7 @@ public class WorldObject implements World {
       }
 
       return WorldObject.builder()
-          .maxX(maxX)
-          .maxY(maxY)
+          .size(size)
           .taxis(taxis)
           .taxiEntities(taxiEntities)
           .clients(clients)
@@ -177,9 +195,10 @@ public class WorldObject implements World {
     }
   }
 
-  public void reset() {
+  public void reset(WorldSize worldSize) {
     try {
       lock.writeLock().lock();
+      this.size = worldSize;
       this.taxis.clear();
       this.taxiEntities.clear();
       this.clients.clear();
@@ -189,6 +208,10 @@ public class WorldObject implements World {
       lock.writeLock().unlock();
     }
     this.currentTime = 0;
+  }
+
+  public void reset() {
+    this.reset(size);
   }
 
   public WorldMutator mutate() {
@@ -292,10 +315,10 @@ public class WorldObject implements World {
     if (position == null) {
       return new Position(0, 0);
     }
-    int maxAllowedX = Math.max(0, maxX - 1);
-    int maxAllowedY = Math.max(0, maxY - 1);
-    int clampedX = Math.max(0, Math.min(maxAllowedX, position.getX()));
-    int clampedY = Math.max(0, Math.min(maxAllowedY, position.getY()));
+    int maxAllowedX = Math.max(0, size.getMaxX() - 1);
+    int maxAllowedY = Math.max(0, size.getMaxY() - 1);
+    int clampedX = Math.clamp(position.getX(), 0, maxAllowedX);
+    int clampedY = Math.clamp(position.getY(), 0, maxAllowedY);
     if (clampedX == position.getX() && clampedY == position.getY()) {
       return position;
     }
